Remove landObeliskSpawnDistance, landFloorHeight, and useOldSpawnerAmounts from config